Fix overflow

--- a/client/src/pages/post/post.module.scss
+++ b/client/src/pages/post/post.module.scss
@@ -4,7 +4,7 @@
   justify-content: center;
   width: 100%;
   margin-top: 2rem;
-  overflow: scroll;
+  // overflow: scroll;
 }
 
 .post {
